# bitso_challenge

./: .gitignore  README.md  pyproject.toml
data/: queries.sql
data/erd/: erd mermaid.mmd
src/: config.py  dag_manager.py  main.py  pipeline.py
src/dal/: my_duckdb.py  my_sqlite.py
src/dal/queries/: create_all_gold_tables.py  populate_dim_date.py  populate_fact_transactions.py  populate_scd_dim_entity.py  populate_scd_dim_entity_duckdb.py
src/helpers/: clean.py  plot.py
tests/great_expectations/: gold_tables.py  silver_tables.py
